# fission

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  TODO  build.rs
fission/: Cargo.toml
fission-cli/: Cargo.toml
fission-cli/src/: main.rs
fission-core/: Cargo.toml
fission-core/src/: lib.rs  scene.rs
fission-core/src/aggregate/: bvh.rs
fission-core/src/bsdf/: dielectric.rs  microfacet.rs  mirror.rs  mod.rs
fission-core/src/image/: pixel.rs
fission-core/src/light/: emitter.rs  mod.rs  point.rs
fission-core/src/sampler/: independent.rs  mod.rs
fission-core/src/shape/: mod.rs
fission-core/src/texture/: gradient.rs
fission-core/src/tracer/: ao.rs  direct.rs  normals.rs  silhouette.rs
fission-core/src/util/: dpdf.rs  either.rs  mod.rs
fission-gui/: Cargo.toml  build.rs
fission-gui/src/: main.rs
fission-gui/src/graphics/: mod.rs  shader.vert  texture.rs
fission-gui/src/graphics/bitmap/: mod.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
fission-gui/src/graphics/blit/: shader.frag  shader.frag.spv  shader.vert
fission/src/: lib.rs  renderer.rs
fission/src/aggregate/: bvh.rs
fission/src/bsdf/: diffuse.rs  mirror.rs
fission/src/camera/: mod.rs
fission/src/image/: mod.rs  pixel.rs  rect.rs
fission/src/light/: infinite.rs  point.rs
fission/src/sampler/: independent.rs  rng.rs
fission/src/shape/: intersection.rs
fission/src/tracer/: normals.rs  silhouette.rs
fission/src/util/: vec.rs
scenes/ajax/: ao.yaml  av.yaml  direct.yaml  emitter.yaml  glass.yaml  heatmap.yaml  volumetric.yaml
scenes/camelhead/: av.yaml
scenes/cbox/: bsdf.yaml  direct.yaml  path.yaml  water_caustics.yaml
scenes/city/: building.yaml  scene.yaml
scenes/clocks/: path.yaml
scenes/odyssey/: direct.yaml  path.yaml
scenes/sphere/: direct.yaml  direct_ems.yaml  direct_ems_2.yaml  direct_mats.yaml  direct_mats_2.yaml  volumetric.yaml
scenes/sponza/: ao.yaml  av.yaml  checkerboard.yaml  direct.yaml  glass.yaml
scenes/table/: path.yaml  volumetric.yaml
scenes/teapot/: ao.yaml  av.yaml  direct.yaml  heatmap.yaml  normals.yaml  volumetric.yaml
scenes/veach/: direct.yaml  direct_ems.yaml  direct_mats.yaml  path.yaml
src/: color.rs  config.rs  image.rs  integrator.rs  lib.rs  main.rs  progress.rs  renderer.rs  scene.rs  solver.rs  util.rs  warp.rs
src/aggregate/: bvh.rs  mod.rs  seq.rs
src/bsdf/: dielectric.rs  diffuse.rs  fresnel.rs  microfacet.rs  mirror.rs  mod.rs
src/camera/: mod.rs  perspective.rs
src/core/: array2.rs  array3.rs  color.rs  dim.rs  dpdf.rs  either.rs  interpolate.rs  mod.rs  num.rs  ops.rs  parallel.rs  progress.rs  tuple.rs  vec.rs
src/filter/: gaussian.rs  mod.rs  square.rs
src/geometry/: bbox.rs  bound.rs  frame.rs  intersection.rs  mod.rs  normal3.rs  point3.rs  ray3.rs  triangle.rs  vector3.rs  warp.rs
src/geometry/transform/: affine3.rs  mod.rs  normalization2.rs  rotscale3.rs  similarity3.rs
src/image/: bitmap.rs  block.rs  io.rs  mod.rs  pixel.rs  rect.rs
src/integrator/: av.rs  mod.rs  normals.rs  silhouette.rs
src/light/: emitter.rs  infinite.rs  mod.rs  point.rs
src/loader/: config.rs  mod.rs  obj.rs
src/medium/: homogeneous.rs  interface.rs  mod.rs  phase.rs
src/sampler/: independent.rs  mod.rs  rng.rs  uniform.rs
src/sampler/sobol/: mod.rs  sobol.rs  vdc.data  vdc.rs  vdc_inv.rs
src/shape/: emitter.rs  intersection.rs  mod.rs  sphere.rs  triangle.rs
src/structure/: aggregate.rs  bvh.rs  mesh.rs  mod.rs  seq.rs  sphere.rs  triangle.rs  vec.rs
src/texture/: bitmap.rs  checkerboard.rs  constant.rs  gradient.rs  grid.rs  mod.rs  random_grid.rs
src/tracer/: ao.rs  av.rs  direct.rs  direct_ems.rs  direct_mats.rs  heatmap.rs  mod.rs  normals.rs  path.rs  silhouette.rs  vol_path.rs
src/types/: array.rs  array2.rs  array_num.rs  axis.rs  color.rs  f3.rs  float.rs  interpolate.rs  mod.rs  num.rs  pdf.rs  point2.rs
src/util/: config.rs  dpdf.rs  either.rs  mod.rs  parallel.rs  pdf.rs  progress.rs  res.rs  threaded.rs  vec.rs
(+6 files in other folders)
