[package]
name = "fission"
version = "0.1.0"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
bincode = "*"
crossbeam = "*"
ctrlc = "*"
exr = "^1"
graphite = { git = "https://github.com/sshashank124/graphite" }
objloader = { git = "https://github.com/sshashank124/objloader" }
rand_core = "*"
rand_pcg = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

[profile.release]
panic = "abort"
lto = "thin"
