[package]
name = "fission-cli"
description = "Physically-Based Ray Tracing Renderer - CLI Interface"
version = "0.1.0"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sshashank124/fission"
keywords = ["ray-tracing", "rendering", "realistic", "path-tracing", "graphics"]
categories = ["graphics", "mathematics", "rendering"]

[dependencies]
anyhow = "^1"
ctrlc = "^3"
fission = { path = "../fission" }
