[package]
name = "fission-gui"
description = "Physically-Based Ray Tracing Renderer - GUI Interface"
version = "0.1.0"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sshashank124/fission"
keywords = ["ray-tracing", "rendering", "realistic", "path-tracing", "graphics"]
categories = ["graphics", "mathematics", "rendering"]

[dependencies]
anyhow = "^1"
bytemuck = "^1"
fission = { path = "../fission" }
futures = "^0.3"
wgpu = "^0.6"
winit = "0.24"

[build-dependencies]
shaderc = "^0.7"
